@@ -1,3 +1,8 @@
+2010-02-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/42918
+	* gcc.dg/pr42918.c: New test.
+
 2010-02-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* g++.dg/ext/attrib36.C: Require ILP32.
